# Machina

./: .clang-format  CMakeLists.txt  README.md
shaders/: compile.bat  point_light.frag  point_light.frag.spv  point_light.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: app.cpp  app.hpp  component_array.cpp  component_array.hpp  component_manager.cpp  component_manager.hpp  entity_manager.cpp  entity_manager.hpp  main.cpp  template_type_macro.hpp
src/ECS/: ECS.hpp
src/ECS/Base/: centralizer.cpp  centralizer.hpp  component_array.cpp  component_array.hpp  component_manager.cpp  component_manager.hpp  entity_manager.cpp  entity_manager.hpp  system.hpp  system_manager.cpp  system_manager.hpp
src/ECS/Components/: camera.hpp  color.hpp  gravity.hpp  model.hpp  pipeline.hpp  point_light.hpp  rigid_body.hpp  transform.hpp
src/ECS/Systems/: camera_input_system.cpp  camera_input_system.hpp  camera_system.cpp  camera_system.hpp  collision_system.cpp  collision_system.hpp  gravity_system.cpp  gravity_system.hpp  physics_system.cpp  physics_system.hpp  point_light_system.cpp  point_light_system.hpp  render_system.cpp  render_system.hpp  shadow_map_system.cpp  shadow_map_system.hpp  simple_render_system.cpp  simple_render_system.hpp
src/ECS/Type/: ecs_type.hpp  template_type_macro.hpp
src/vulkan/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  first_app.cpp  first_app.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  shadow_map.cpp  shadow_map.hpp  simple_shader.frag  swap_chain.cpp  swap_chain.hpp  uniform_buffer.hpp  uniform_buffer_type.hpp  uniform_sampler.hpp  utils.hpp  window.cpp  window.hpp
src/vulkan/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
